Swithed to a more recent polyfill for IntersectionObserver and fixed infinite scroll on mobile

--- a/src/components/Main/styles.css
+++ b/src/components/Main/styles.css
@@ -24,4 +24,5 @@
   height: 0;
   width: 0;
   overflow: hidden;
+  margin-top: -10px;
 }
